force-app/main/default/objects/md_npsp_pack__Question_Response__c/md_npsp_pack__Question_Response__c.object-meta.xml
<CustomObject>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{0000000000}</displayFormat>
        <label>Question Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>