force-app/main/default/objects/md_npsp_pack__Question_Response__c/fields/md_npsp_pack__Account__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>