force-app/main/default/objects/md_npsp_pack__Question_Response__c/fields/md_npsp_pack__Answer__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Answer__c</fullName>
    <label>Answer</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>