force-app/main/default/objects/md_npsp_pack__Question_Response__c/fields/md_npsp_pack__Campaign__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign related to the questions</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>