force-app/main/default/objects/md_npsp_pack__Question_Response__c/fields/md_npsp_pack__Contact__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>