force-app/main/default/objects/md_npsp_pack__Question_Response__c/fields/md_npsp_pack__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>