force-app/main/default/objects/md_npsp_pack__Question_Response__c/fields/md_npsp_pack__Question__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>