force-app/main/default/objects/md_npsp_pack__Question_Response__c/listViews/md_npsp_pack__All.listView-meta.xml
<ListView>
    <fullName>md_npsp_pack__All</fullName>
    <columns>NAME</columns>
    <columns>md_npsp_pack__Campaign__c</columns>
    <columns>md_npsp_pack__Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>md_npsp_pack__Question__c</columns>
    <columns>md_npsp_pack__Answer__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>